# lab3-1

./: README.md  lab3.cabal
src/: Lab3.hs
test/: Spec.hs
